# cloud-casino

./: .dev.env  .env  .example.env  Cargo.toml  Dockerfile  justfile
.sqlx/: query-21ff9917c3fba02ca04ab1984f54ef218576ffa9eada51fcb98663cf25530059.json  query-39a837504d8ff979030eef08275bae7ec7114304acfd7278d8f03353c3fbae9f.json  query-3af748221ac87e797d84610431a263f412073a74837b00b3dbb45a008601cb7b.json  query-4c35e1bb6872132e9c6ef5d20817f3994084bbf58790ff82e119f886afc35e7e.json  query-52c695b8073d96b1bed5f7157903e5233eb8959e167fc3e96eee638024652dc3.json  query-71e278e881137ac249a94aea3fddc28fc9f43ca7e32d2fe4acbf5e1a363aa20d.json  query-89026220afb6b9f7dd5b576dfa19e4411bf5e50b7cf5cffb003ce2f41ed04591.json  query-8907ad01f3f31b985e6476fca1c0dc00fec0ee2e7cc1ae0f0117f97b2922048c.json  query-9479f4dee85dd71c5c1c7925f54ce6b1816f0eb3a7f36560d456cd3523d806d1.json  query-accda73eff2236561d450de930be5aeb48dd677d7a5a429b7fb62aabf2281802.json  query-adc75effb548786dd3e72ff1354bbbebee0419e2535b872db4689ed00804b7f7.json  query-ae1d33a979f70c51e9ea4991834c0c8fe4e3b97c29acb7983908dea1baa0571e.json  query-ae99e356eb8d7cdd9e26557e2f5a0e86205567084dd169bbbc3c7eca952be5de.json  query-d0bbc53f3dfed068f05ff36c57a866d3bf1df8df3cc4f0b2e5e7fe64961e9e8a.json  query-d3334c0d6854c70a596b1388c5363f15f0eb38155c048a6c2e6064c4731ab43b.json  query-ee7f38dbb4a89e33f8c1b84443aad3d6fcb9a305cc61860e3b8cf39aac026d90.json  query-eec738ce4b26f2d45dacad1ef4aa948903e75805c557596c98f0296a65a95ecb.json  query-f521cc6ba59987a6d24786268caff95c90c5d346121029591b2566588e57d816.json
migrations/: 20240506120638_create-initial-tables.down.sql  20240506120638_create-initial-tables.up.sql
src/: bet.rs  db.rs  main.rs  payout.rs  user.rs
src/app/: login.rs  mod.rs
src/app/login/: mod.rs
src/app/login/views/: login.rs
src/app/services/: bet.rs  mod.rs
src/app/views/: bet_form.rs  forecast.rs  head.rs  home.rs  mod.rs  payout.rs  payouts.rs  shell.rs
src/services/: bet.rs  mod.rs  state.rs  weather.rs
src/services/bet/: db.rs  mod.rs
src/services/new_weather/: api.rs  db.rs  mod.rs
src/services/oauth/: mod.rs
src/services/weather/: api.rs  db.rs  mod.rs
src/views/: app.rs  bet_form.rs  forecast.rs  mod.rs
src/weather/: forecast.rs  mod.rs  service.rs
static/: app.css  app.webmanifest  main.css  main.js
