[package]
name = "cloud-casino"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
axum-htmx = "0.5.0"
futures = "0.3.30"
maud = { version = "0.26.0", features = ["axum"] }
moka = { version = "0.12.7", features = ["future"] }
num_enum = { version = "0.7.2", features = ["complex-expressions"] }
reqwest = { version = "0.12.4", features = [
    "json",
    "rustls-tls",
], default-features = false }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
sqlx = { version = "0.7.4", features = [
    "runtime-tokio",
    "tls-rustls",
    "sqlite",
    "time",
    "macros",
], default-features = false }
time = { version = "0.3.36", features = ["macros", "serde-human-readable"] }
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs"] }
tower-sessions = "0.12.2"
tower-sessions-sqlx-store = { version = "0.12.0", features = ["sqlite"] }
