[package]
name = "cloud-casino"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-htmx = "0.5.0"
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde", "now", "alloc"] }
chrono-tz = "0.9.0"
futures = "0.3.30"
maud = { version = "0.26.0", features = ["axum"] }
num_enum = { version = "0.7.2", features = ["complex-expressions"] }
rand = "0.8.5"
reqwest = { version = "0.12.4", features = [
    "json",
    "rustls-tls",
], default-features = false }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
sqlx = { version = "0.7.4", features = [
    "runtime-tokio",
    "tls-rustls",
    "sqlite",
    "chrono",
    "macros",
], default-features = false }
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs"] }
tower-sessions = "0.12.2"
tower-sessions-sqlx-store = { version = "0.12.0", features = ["sqlite"] }
url = "2.5.0"
